# BLAKE3

./: .envrc  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  _codeql_detected_source_root  build.rs  flake.nix  tis.config
.cargo/: config.toml
.github/workflows/: build_b3sum.py  ci.yml  codeql-analysis.yml  nix.yml  rust.yml  tag.yml  upload_github_release_asset.py
asm/: asm.py  out.S
b3sum/: Cargo.toml  README.md  b3sum.1  bench.py  build.rs  what_does_check_do.md
b3sum/src/: cli.rs  gpu.rs  lib.rs  main.rs  unit_tests.rs  vulkan.rs
b3sum/src/vulkan/: mod.rs  shaders.rs
b3sum/tests/: cli_tests.rs  test.rs
benches/: README_CN.md  bench.rs
c/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  Makefile.testing  README.md  blake3-avx2-x86_64-unix.S  blake3-avx2-x86_64-windows-gnu.S  blake3-avx512-x86_64-unix.S  blake3-avx512-x86_64-windows-gnu.S  blake3-avx512-x86_64-windows-msvc.asm  blake3-sse41-x86_64-windows-msvc.asm  blake3.c  blake3.h  blake3_avx2.c  blake3_avx2_x86-64_unix.S  blake3_avx2_x86-64_windows_gnu.S  blake3_avx512.c  blake3_avx512_x86-64_unix.S  blake3_avx512_x86-64_windows_gnu.S  blake3_avx512_x86-64_windows_msvc.asm  blake3_dispatch.c  blake3_dispatch_ifunc.c  blake3_impl.h  blake3_lasx.c  blake3_llfio.cpp  blake3_lsx.c  blake3_neon.c  blake3_openmp.c  blake3_portable.c  blake3_pthread.c  blake3_rvv.c  blake3_sse2.c  blake3_sse2_x86-64_unix.S  blake3_sse2_x86-64_windows_gnu.S  blake3_sse2_x86-64_windows_msvc.asm  blake3_sse41.c  blake3_sse41_x86-64_unix.S  (+13 more)
c/.github/workflows/: ci.yml
c/_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  blake3-config-version.cmake  blake3-config.cmake  cmake_install.cmake  libblake3.pc
c/_codeql_build_dir/dependencies/: CTestTestfile.cmake  Makefile  cmake_install.cmake
c/blake3_c_rust_bindings/: Cargo.toml  README.md  build.rs  cross_test.sh
c/blake3_c_rust_bindings/benches/: bench.rs
c/blake3_c_rust_bindings/src/: lib.rs  test.rs
c/cmake/BLAKE3/: ContinuousIntegration.cmake  Examples.cmake  Testing.cmake  Utils.cmake
c/dependencies/: CMakeLists.txt
c/dependencies/llfio/: CMakeLists.txt
c/dependencies/tbb/: CMakeLists.txt
c/examples/: CMakeLists.txt
reference_impl/: Cargo.toml  README.md  reference_impl.rs
rust/blake3_guts/: Cargo.toml
rust/blake3_guts/src/: lib.rs  portable.rs  test.rs
rust/guts/: Cargo.toml  build.rs  readme.md
rust/guts/src/: avx512.rs  lib.rs  portable.rs  riscv64gcv.S  riscv64gcv.rs  riscv_rva23u64.S  riscv_rva23u64.rs  test.rs
src/: avx2.rs  c_avx512.rs  c_neon.rs  c_sse41.rs  digest.rs  ffi_avx2.rs  ffi_avx512.rs  ffi_neon.rs  ffi_rvv.rs  ffi_sse2.rs  ffi_sse41.rs  file.rs  guts.rs  guts2.rs  hazmat.rs  io.rs  join.rs  kernel.rs  kernel2.rs  lib.rs  platform.rs  portable.rs  portable2.rs  rust_avx2.rs  rust_sse2.rs  rust_sse41.rs  sse41.rs  test.rs  traits.rs  wasm32_simd.rs
src/c/: blake3.h  blake3_avx512.c  blake3_impl.h  blake3_neon.c  blake3_portable.c
src/gpu/: mod.rs
src/gpu/shaders/: Makefile  blake3-chunk-be.spv  blake3-chunk-le.spv  blake3-parent.spv  blake3.comp  blake3.spv  endian.comp  endian.spv
test_vectors/: Cargo.toml  cross_test.sh  test_vectors.json
test_vectors/src/: lib.rs
tests/ci/: Cargo.toml
tests/ci/src/: main.rs
tis-ci/: test.c
tis-ci/test_vectors/: 03_expected_hash  04_expected_keyed_hash  06_expected_hash  08_expected_derive_key  08_expected_keyed_hash  09_expected_keyed_hash  10_expected_hash_xof  11_expected_hash  12_expected_keyed_hash  13_expected_derive_key  15_expected_keyed_hash_xof  17_expected_derive_key  17_expected_derive_key_xof  17_expected_hash  18_expected_derive_key_xof  19_expected_keyed_hash  21_expected_hash_xof
tools/: release.md
tools/compiler_version/: Cargo.toml
tools/compiler_version/src/: main.rs
tools/instruction_set_support/: Cargo.toml
tools/instruction_set_support/src/: main.rs
trustinsoft/: common.config  regenerate.py  test.c
trustinsoft/test_vectors/: 01_expected_derive_key  01_expected_derive_key_xof  01_expected_hash  01_expected_hash_xof  01_expected_keyed_hash  01_expected_keyed_hash_xof  02_expected_derive_key  02_expected_derive_key_xof  02_expected_hash  02_expected_hash_xof  02_expected_keyed_hash  02_expected_keyed_hash_xof  03_expected_derive_key  03_expected_derive_key_xof  03_expected_hash  03_expected_hash_xof  03_expected_keyed_hash  03_expected_keyed_hash_xof  04_expected_derive_key  04_expected_derive_key_xof  04_expected_hash  04_expected_hash_xof  04_expected_keyed_hash  04_expected_keyed_hash_xof  04_input  05_expected_derive_key  05_expected_derive_key_xof  05_expected_hash  05_expected_hash_xof  05_expected_keyed_hash  05_expected_keyed_hash_xof  06_expected_derive_key  06_expected_derive_key_xof  06_expected_hash  06_expected_hash_xof  06_expected_keyed_hash  06_expected_keyed_hash_xof  06_input  07_expected_derive_key  07_expected_derive_key_xof  (+179 more)
