[package]
name = "b3sum"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "a command line implementation of the BLAKE3 hash function"
repository = "https://github.com/BLAKE3-team/BLAKE3"
license = "CC0-1.0 OR Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
default = ["c_avx512", "rayon"]
c_avx512 = ["blake3/c_avx512"]
c_neon = ["blake3/c_neon"]
rayon = ["blake3/rayon", "memmap"]

[dependencies]
anyhow = "1.0.25"
blake3 = { version = "0.1", path = ".." }
clap = { version = "2.33.0", default-features = false }
hex = "0.4.0"
memmap = { version = "0.7.0", optional = true }

[dev-dependencies]
assert_cmd = "0.12.0"
duct = "0.13.3"
tempfile = "3.1.0"
